force-app/main/default/objects/ucinn_portal_Receipt__c/ucinn_portal_Receipt__c.object-meta.xml
<CustomObject>
    <description>Receipt custom object that stores data from payment vendor</description>
    <label>Receipt</label>
    <nameField>
        <label>ucinn portal Receipt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>