force-app/main/default/objects/ucinn_portal_Receipt__c/fields/Charge_Id__c.field-meta.xml
<CustomField>
    <fullName>Charge_Id__c</fullName>
    <label>Charge Id</label>
    <type>TextArea</type>
</CustomField>