force-app/main/default/objects/ucinn_portal_Receipt__c/fields/Charged_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charged_Amount__c</fullName>
    <label>Charged Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>