force-app/main/default/objects/ucinn_portal_Receipt__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card - Online</fullName>
                <default>true</default>
                <label>Credit Card - Online</label>
            </value>
            <value>
                <fullName>Credit Card - Onsite</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>